# galactic-science-opm

./: .gitignore  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
galactic_science_opm/: asgi.py  settings.py  wsgi.py
templates/tom_common/: index.html
